refactor: Refatoração do módulo core, Correção do DeleteCustomer