@@ -5,7 +5,7 @@ import br.com.tp.lncr.core.dtos.fooditem.FoodItemImageDTO;
 import br.com.tp.lncr.core.exceptions.FoodItemException;
 import br.com.tp.lncr.core.interfaces.fooditem.FoodItemGateway;
 import br.com.tp.lncr.core.utils.FoodItemImageRules;
-import br.com.tp.lncr.core.utils.Logger;
+import br.com.tp.lncr.core.utils.LoggerUtil;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,7 +22,7 @@ public class CreateFoodItemImageUseCase {
     }
 
     public FoodItemImage execute(Integer foodItemId, FoodItemImageDTO foodItemImageDTO) {
-        Logger.info("Iniciando criação de imagem para o item de alimentação com id: " + foodItemId);
+        LoggerUtil.info("Iniciando criação de imagem para o item de alimentação com id: " + foodItemId);
         Integer maxImages = foodItemImageRules.getMaxNumberOfImages();
         List<FoodItemImage> foodItemImageList = foodItemGateway.getAllImagesByFoodItemId(foodItemId, false);
 
@@ -36,25 +36,22 @@ public class CreateFoodItemImageUseCase {
             throw new FoodItemException(foodItemImage.getImageError(), 404);
         }
 
-        foodItemImage = setNewImageInfo(foodItemId, foodItemImage, foodItemImageList, maxImages);
+        setNewImageInfo(foodItemId, foodItemImage, foodItemImageList, maxImages);
         foodItemGateway.createFoodItem(foodItemImage);
-        Logger.info("Imagem criada com sucesso para o item de alimentação com id: " + foodItemId);
+        LoggerUtil.info("Imagem criada com sucesso para o item de alimentação com id: " + foodItemId);
         return foodItemImage;
     }
 
 
-    private FoodItemImage setNewImageInfo(Integer foodItemId, FoodItemImage foodItemImage, List<FoodItemImage> foodItemImageList, Integer maxImages) {
-        Logger.debug("Definindo informações da imagem para o item de alimentação com id: " + foodItemId);
-
-        int baseImageId = foodItemId * 10; //Obtendo Id base para imagens
+    private void setNewImageInfo(Integer foodItemId, FoodItemImage foodItemImage, List<FoodItemImage> foodItemImageList, Integer maxImages) {
+        LoggerUtil.debug("Definindo informações da imagem para o item de alimentação com id: " + foodItemId);
         List<Integer> possiblesIds = IntStream.rangeClosed(1, maxImages).map(i -> foodItemId * 10 + i).boxed().collect(Collectors.toList()); //Criando lista de possíveis ids para o Item de Alimentação
-        List<Integer> existsIds = foodItemImageList.stream().map(FoodItemImage::getId).collect(Collectors.toList());         //Lista de ids existentes
+        List<Integer> existsIds = foodItemImageList.stream().map(FoodItemImage::getId).toList();         //Lista de ids existentes
         possiblesIds.removeAll(existsIds);//Removendo id existentes da lista de ids possíveis
 
         //Alterando informações da imagem
         foodItemImage.setFoodItemId(foodItemId);
         foodItemImage.setId(possiblesIds.stream().min(Integer::compareTo).orElse(null));
         foodItemImage.setFileName(foodItemImage.getId() + "." + foodItemImage.getFileExtension());
-        return foodItemImage;
     }
 }
